[gd_scene load_steps=14 format=2]

[ext_resource path="res://app.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-BoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Roboto-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Roboto-LightItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Preview.gd" type="Script" id=6]
[ext_resource path="res://fonts/RobotoMono-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 5.0
content_margin_top = 0.0
bg_color = Color( 0.529412, 0.521569, 0.521569, 1 )
border_color = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_left = 40.0
margin_top = 64.0
margin_right = 480.0
margin_bottom = 392.0
window_title = "Open a File"
mode = 0

[node name="SaveFileDialog" type="FileDialog" parent="."]
margin_left = 64.0
margin_top = 72.0
margin_right = 472.0
margin_bottom = 432.0

[node name="MenuButtonFile" type="MenuButton" parent="."]
margin_right = 64.0
margin_bottom = 32.0
text = "File"
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "Save As", null, 0, false, false, 3, 0, null, "", false, "Quit", null, 0, false, false, 4, 0, null, "", false ]

[node name="EditorSplitContainer" type="HSplitContainer" parent="."]
margin_left = 5.0
margin_top = 32.0
margin_right = 1019.0
margin_bottom = 595.0
size_flags_horizontal = 3
script = ExtResource( 6 )

[node name="EditorPane" type="VBoxContainer" parent="EditorSplitContainer"]
margin_right = 501.0
margin_bottom = 563.0
size_flags_horizontal = 3

[node name="EditorLabel" type="Label" parent="EditorSplitContainer/EditorPane"]
margin_right = 501.0
margin_bottom = 14.0
text = "Editor"
align = 1

[node name="TextEdit" type="TextEdit" parent="EditorSplitContainer/EditorPane"]
margin_top = 18.0
margin_right = 501.0
margin_bottom = 563.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewPane" type="VBoxContainer" parent="EditorSplitContainer"]
margin_left = 513.0
margin_right = 1014.0
margin_bottom = 563.0
size_flags_horizontal = 3

[node name="PreviewLabel" type="Label" parent="EditorSplitContainer/PreviewPane"]
margin_right = 501.0
margin_bottom = 14.0
text = "Preview"
align = 1

[node name="Preview" type="RichTextLabel" parent="EditorSplitContainer/PreviewPane"]
margin_top = 18.0
margin_right = 501.0
margin_bottom = 563.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
bbcode_enabled = true

[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="meta_clicked" from="EditorSplitContainer/PreviewPane/Preview" to="." method="_on_Preview_meta_clicked"]
